# pomodoro-timer

./: CLAUDE.md  Cargo.toml  README.md
src/: app.rs  celebration.rs  config.rs  main.rs  notifications.rs  persistence.rs  state.rs  theme.rs  timer.rs
src/ui/: circular_timer.rs  mod.rs
