[package]
name = "pomodoro-timer"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = "0.2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
notify-rust = "4"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
